fix(comp:desc): ensure that the label and content are aligned at the top

--- a/packages/components/desc/style/index.less
+++ b/packages/components/desc/style/index.less
@@ -14,6 +14,7 @@
       text-align: end;
       white-space: nowrap;
       color: var(--ix-desc-label-color);
+      vertical-align: top;
 
       &::after {
         position: relative;
@@ -40,6 +41,7 @@
     display: table-cell;
     width: 100%;
     padding-right: 16px;
+    vertical-align: top;
   }
 
   &-sm &-item {
